# ADPanel-Termux

./: Cargo.toml  README.md  initialize.sh  security.json  start.sh
bots/hey/: .adpanel.json  index.js  package-lock.json  package.json
public/: dashboard.css  settings.css  style.css
src/: app.rs  main.rs  models.rs  routes.rs  ws.rs
templates/: bot.html  dashboard.html  forgot_password.html  login.html  register.html  settings.html
