[package]
name = "adpanel"
version = "1.0.0"
edition = "2021"
default-run = "adpanel"

[[bin]]
name = "adpanel"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "sync", "time", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.17"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
rand = "0.9"
tera = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
uuid = { version = ">=1.0, <1.11", features = ["v4"] }
futures = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
percent-encoding = "2"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
hex = "0.4"
regex-lite = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"

[profile.release]
opt-level = 2
lto = true
strip = true
panic = "abort"
codegen-units = 1
